[fix] install the latest dependent library

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-asn1crypto==0.24.0
-bcrypt==3.1.4
-cffi==1.11.5
-colorama==0.3.9
-cryptography==2.1.4
-enum34==1.1.6
-frida==10.6.58
-idna==2.6
-ipaddress==1.0.19
-paramiko==2.4.0
-prompt-toolkit==1.0.15
-pyasn1==0.4.2
-pycparser==2.18
-Pygments==2.2.0
-PyNaCl==1.2.1
-scp==0.10.2
-six==1.11.0
-tqdm==4.19.6
-wcwidth==0.1.7
+asn1crypto
+bcrypt
+cffi
+colorama
+cryptography
+enum34
+frida
+idna
+ipaddress
+paramiko
+prompt-toolkit
+pyasn1
+pycparser
+Pygments
+PyNaCl
+scp
+six
+tqdm
+wcwidth
